# DUNE-Multiscale-super

./: .gitignore  .gitmodules  .mailmap  .travis.yml  Vccontrol  allinea_submit_file.qtf  applyPatches.sh  buildbot.opts  common.patch  config.opts  config.opts.bwCluster  config.opts.clang  config.opts.clang.xcode  config.opts.docs  config.opts.gcc  config.opts.gcc-4.4  config.opts.gcc-4.6  config.opts.gcc-4.8  config.opts.icc  config.opts.last  config.opts.mic  config.opts.mpi  config.opts.palma  config.opts.stinson_clang  config.opts.stinson_clang_release  config.opts.stinson_clang_tools  config.opts.stinson_documentation  config.opts.stinson_gcc  config.opts.stinson_gcc_4.8  config.opts.stinson_gcc_4.8_release  config.opts.stinson_gcc_intel  config.opts.stinson_gcc_nompi  config.opts.stinson_gcc_release  config.opts.stinson_gcc_release_alt  config.opts.stinson_intel  config.opts.stinson_intel_release  config.opts.stinson_no_documentation  config.opts.stinson_polly  config.opts.wwu-centos_documentation  config.opts.wwu-centos_no_documentation  (+22 more)
.travis/: build_docs.sh  deploy_docs.sh  init_sshkey.sh  wwu-numerik.github.io.rsa.enc  wwu-numerik_dune-multiscale.rsa.enc
.travis/docker/: dune-multiscale-testing.docker  dune-multiscale.docker  interactive_container.bash  update_base_image.py  update_image.py
.travis/docker/dune-multiscale-dev/: Dockerfile
.travis/docker/dune-multiscale-testing/: Dockerfile
.travis/docker/testing-base/: Dockerfile
config.opts/: gcc-5.4.0  gcc-5.4.0r  mic  paranoia_gcc_4.9  paranoia_gcc_4.9_debug  paranoia_gcc_4.9_release  paranoia_gcc_5  paranoia_mic_icc_2015u3  paranoia_mic_icc_2015u3_release  stinson_clang  stinson_clang_release  stinson_clang_sanity  stinson_gcc  stinson_gcc_optimized  stinson_gcc_release  stinson_icc  stinson_icc_release  supermuc_phase1  supermuc_phase2  supermuc_phase2.mlmc  wwu
docker/: Makefile
docker/dev/: Makefile  README.md
docker/dev/clion-nvidia/: Dockerfile.in
docker/dev/include/: multiscale
docker/dev/interactive/: Dockerfile.in
docker/dev/interactive-nvidia/: Dockerfile.in
docker/dev/templight/: Dockerfile.in
dune-random-diff/: CMakeLists.txt  Makefile.am  config.h.cmake  configure.ac  dune-random-diff.pc.in  dune.module
dune-random-diff-exp/: CMakeLists.txt  DartConfiguration.tcl  config.h.cmake  dune-random-diff-exp.pc.in  dune.module
dune-random-diff-exp/cmake/modules/: CMakeLists.txt
dune-random-diff-exp/doc/doxygen/: Doxylocal
dune-random-diff-exp/dune/: CMakeLists.txt
dune-random-diff-exp/dune/random-diff-exp/: CMakeLists.txt  random-diff-exp.hh
dune-random-diff-exp/src/: CMakeLists.txt  dune-random-diff.cc
dune-random-diff-exp/src/Mlmc/: level.hh  mlmc.cc  mlmc.hh
dune-random-diff-exp/src/Permeability/: CEGenerator.hh  SRUpscale.hh  correlation.hh  partition.hh  permeability.hh
dune-random-diff-exp/src/Utils/: elementdata.hh  floatCompare.hh
dune-random-diff-exp/src/randomDiff/: CMakeLists.txt  randomDiffProblem.cc  randomDiffProblem.hh
dune-random-diff/cmake/modules/: CMakeLists.txt  DuneRandomDiffMacros.cmake  FindFFTW.cmake  Makefile.am
dune-random-diff/cmake/pkg/: dune-random-diff-config.cmake
dune-random-diff/doc/: Makefile.am
dune-random-diff/doc/doxygen/: Doxylocal
dune-random-diff/dune/: CMakeLists.txt  Makefile.am
dune-random-diff/dune/random-diff/: CMakeLists.txt  Makefile.am  random-diff.hh
dune-random-diff/m4/: CMakeLists.txt  Makefile.am  dune-random-diff.m4
dune-random-diff/src/: CMakeLists.txt  baseTypes.hh  dune-random-diff.cc  dune-random-diff.hh
dune-random-diff/src/Mlmc/: level.hh  mlmc.cc  mlmc.hh
dune-random-diff/src/Permeability/: CEGenerator.hh  SRUpscale.hh  correlation.hh  permeability.hh
dune-random-diff/src/Utils/: floatCompare.hh  vertexdata.hh
dune-random-diff/src/randomDiff/: boundaryCond.cc  boundaryCond.hh  randomDiffProblem.cc
dune-random-diff/src/randomDiff/LocalOperators/: CMakeLists.txt  CellCenteredFV.hh
dune-random-diff/src/randomDiff/Solvers/: CMakeLists.txt  Solvers.hh
environments/arch-full/: PATH.sh
environments/arch-minimal/: external-libraries.cfg
environments/debian-minimal/: PATH.sh
old_opts/: clang-3.5  gcc  icc
opts/: bwCluster  cheops  cheops.dbg  clang  config.opts.gcc-4.8  config.opts.icc  config.opts.mpi  config.opts.palma  config.opts.stinson_clang_release  config.opts.stinson_gcc  config.opts.stinson_gcc_release  config.opts.stinson_gcc_snapshot  config.opts.stinson_polly  config.opts.wwu-ubuntu_documentation  gcc  gcc-snapshot  icc  palma  palma.dbg  palma.optimized  palma.thread.dbg  stinson_analyze  stinson_clang  stinson_clang_release  stinson_clang_sanity  stinson_gcc  stinson_gcc_optimized  stinson_gcc_release  stinson_gcc_snapshot  stinson_icc  stinson_icc_release  stinson_polly  supermuc  supermuc.gcc  supermuc_debug
patches/: multiscale.patch  spgrid.patch  stuff.patch  subgrid.patch
